--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                                 <span>AI</span>
                             </div>
                             <a href="https://wa.me/6288246327669" target="_blank" class="btn">Chat  Creator</a>
-                             <a href="https://wa.me/6288246327669" target="_blank" class="btn">Chat  Creator</a>                           
+                                                        
                         </div>
                     </div>
                 </div>
@@ -967,31 +967,31 @@
 
             <section id="purchase">
                 <div class="container">
-                    <h2>Beli Script Kissing Assistant</h2>
-                    <p>Dapatkan script penuh Kissing Assistant dan miliki bot canggih Anda sendiri! Pilih paket yang sesuai dengan kebutuhan Anda:</p>
+                    <h2>Beli Script TakinaShop</h2>
+                    <p>Dapatkan script penuh TakinaShop dan miliki bot canggih Anda sendiri! Pilih paket yang sesuai dengan kebutuhan Anda:</p>
                     <div class="purchase-options">
                         <div class="purchase-option">
-                            <h3>Paket No Update</h3>
-                            <h4>Rp 25.000</h4>
+                            <h3>Paket 1</h3>
+                            <h4>Rp 10.000</h4>
                             <ul>
                                 <li>Script versi saat ini</li>
-                                <li>Fitur lengkap sesuai deskripsi</li>
-                                <li>Tidak termasuk update fitur di masa mendatang</li>
+                                <li>Fitur Shop, AI, Dan Lainnya</li>
+                                <li>Gratis Update Fitur</li>
                                 <li>No Encrypt</li>
                             </ul>
-                            <a href="https://wa.me/6283143776050?text=Halo%20Lipp%20Wangsaff,%20saya%20tertarik%20dengan%20script%20Kissing%20Assistant%20paket%20No%20Update%20(Rp%2025.000)." target="_blank" class="btn">Order Paket No Update</a>
+                            <a href="https://wa.me/62882020227534?text=.buysc." target="_blank" class="btn">Order Paket 1</a>
                         </div>
                         <div class="purchase-option">
-                            <h3>Paket Free Update</h3>
-                            <h4>Rp 35.000</h4>
+                            <h3>Paket 2</h3>
+                            <h4>Rp 15.000</h4>
                             <ul>
                                 <li>Script versi saat ini</li>
                                 <li>Fitur lengkap sesuai deskripsi</li>
                                 <li>Gratis update fitur selamanya!</li>
-                                <li>Dukungan prioritas</li>
+                                <li>Mendapatkan Panel Pterodactyl Unlimited</li>
                                 <li>No Encrypt</li>
                             </ul>
-                            <a href="https://wa.me/6283143776050?text=Halo%20Lipp%20Wangsaff,%20saya%20tertarik%20dengan%20script%20Kissing%20Assistant%20paket%20Free%20Update%20(Rp%2035.000)." target="_blank" class="btn">Order Paket Free Update</a>
+                            <a href="https://wa.me/62882020227534?text=.buysc." target="_blank" class="btn">Order Paket 2</a>
                         </div>
                     </div>
                     <p style="text-align:center; margin-top: 30px;"><strong>Keuntungan Membeli Script:</strong> Full Source Code, Mudah Di-custom, Panduan Instalasi, Komunitas Pengguna (via Grup WA).</p>
@@ -1003,8 +1003,8 @@
                     <h2>Hubungi Kami</h2>
                     <p style="text-align: center; margin-bottom: 30px;">Jangan ragu untuk menghubungi kami jika Anda memiliki pertanyaan, saran, atau ingin berkolaborasi!</p>
                     <div class="contact-button-group">
-                        <a href="https://wa.me/6283143776050" target="_blank" class="btn">Chat Kreator (Lipp Wangsaff)</a>
-                        <a href="https://wa.me/923402180477" target="_blank" class="btn">Chat Nomor Bot (Demo)</a>
+                        <a href="https://wa.me/6288246327669" target="_blank" class="btn">Chat Kreator (Lipp Wangsaff)</a>
+                        <a href="https://wa.me/62882020227534" target="_blank" class="btn">Chat Nomor Bot (Demo)</a>
                         <a href="https://chat.whatsapp.com/IURMj1zIlzH3syjfnaNmjK" target="_blank" class="btn">Gabung Saluran X-PannZz</a>
                     </div>
                 </div>
